syntax = "proto3";

// Then the compiler also creates a separate .java file for each top-level message,
// enumeration, and service declared in the .proto file.
option java_package = "cl.ucn.fondef.sata.mini.grpc";


// General  - - - - - - - - - - - - - -

message EmptyReq {
  // se usa esto para las funciones que usan 0 argumentos
}

message IdElementoReq {
  int64 id = 1;
}

message MensajeReply {
  string mensaje_texto = 1;
}

// General  - - - - - - - - - - - - - -
// Usuario  - - - - - - - - - - - - - -

message CredencialesEntityReq {
  string email = 1;
  string password = 2;
}

message SesionEntityReply {
  bool sesion_iniciada = 1;
  string json_web_token = 2;
}

message RutEntityReq {
  string rut = 1;
}

message UsuarioEntity {
  enum EstadoUsuario {
    ACTIVO = 0;
    INACTIVO = 1;
  }

  enum RolUsuario {
    ADMINISTRADOR = 0;
    CONFIGURADOR = 1;
    OPERADOR = 2;
  }

  string nombre = 1;
  string apellido = 2;
  string rut = 3;
  string email = 4;
  string password = 5;
  RolUsuario rol = 6;
  EstadoUsuario estado = 7;
}

message UsuarioEntityReq {
  string rut_administrador = 1;
  UsuarioEntity usuario = 2;
}

message UsuarioEntityReply {
  int64 id = 1;
  UsuarioEntity usuario = 2;
}

message UsuariosEntityReply {
  repeated UsuarioEntity usuario = 1;
}

message Registro {
  enum TipoRegistro {
    CREACION_USUARIO = 0;
    LOGIN_USUARIO = 1;
    CREACION_SIMULACION = 2;
    INICIO_SIMULACION = 3;
    UPLOAD_ARCHIVO = 4;
  }

  int64 id = 1;
  int64 id_entidad = 2;
  string timestamp = 3;
  string descripcion = 4;
  TipoRegistro tipo = 5;
  UsuarioEntity usuario = 6;
}

message RegistrosReply {
  repeated Registro registro = 1;
}

// Usuario  - - - - - - - - - - - - - -
// Equipo   - - - - - - - - - - - - - -

message ComponenteFisico {
  enum EstadoComponente {
    ACTIVO = 0;
    INACTIVO = 1;
    FALLA = 2;
    REPARACION = 3;
  }

  enum ConexionComponente {
    INPUT_ANALOGICO  = 0;
    INPUT_DIGITAL = 1;
    OUPUT_ANALOGICO = 2;
    OUPUT_DIGITAL = 3;
  }

  enum TipoComponente {
    CAMARA = 0;
    FLUJOMETRO = 1;
    TERMOMETRO = 2;
    VALVULA = 3;
  }

  string nombre = 1;
  string descripcion = 2;
  int32 pin = 3;
  // para webcams, string url. para otros componentes, null
  string url = 4;
  EstadoComponente estado = 5;
  ConexionComponente conexion = 6;
  TipoComponente tipo = 7;
}

enum EstadoEquipo {
  PROTOTIPO = 0;
  CONSTRUCCION = 1;
}

message EquipoEntity {
  string nombre = 1;
  string descripcion = 2;
  string url_repositorio = 3;
  repeated ComponenteFisico componente_fisico = 5;
  EstadoEquipo estado = 8;
  string rut_configurador = 9;
}

message EquipoEntityReq {
  string rut_configurador = 1;
  EquipoEntity equipo = 2;
}

message EquipoEntityReply {
  int64 id = 1;
  EquipoEntity equipo = 2;
}

message ArchivoEquipoEntityReq {
  enum TipoArchivo {
    PNG  = 0;
    PDF  = 1;
    JPG  = 2;
    JPEG = 3;
  }

  string nombre_equipo = 1;
  bytes archivo = 2;
  TipoArchivo tipo_archivo = 3;
}

message ArchivosEquipoEntityReq {
  repeated ArchivoEquipoEntityReq archivo = 1;
}

message ArchivosEquipoEntityReply {
  repeated ArchivoEquipoEntityReq archivo = 1;
}

message EquipoEntityAcotado {
  string nombre = 1;
  EstadoEquipo estado = 2;
}

message EquiposEntityReply {
  // Usado en listas desplegables y filas de tablas
  repeated EquipoEntityAcotado equipo_acotado = 1;
}


// Equipo       - - - - - - - - - - - - - -
// Simulacion   - - - - - - - - - - - - - -

message Evento {
  int32 intensidad = 1;
  int32 duracion = 2;
  int32 posicion = 3;
}

message Secuencia {
  repeated Evento evento = 1;
}

message SimulacionReq {
  string nombre = 1;
  string descripcion = 2;
  string nombre_equipo = 3;
  string rut_operador = 4;
  string fecha_ejecucion = 5;
  repeated Secuencia secuencia = 6;
}

message SimulacionReply {
  int64 id = 1;
  string nombre = 2;
  string descripcion = 3;
  string nombre_equipo = 4;
  string descripcion_equipo = 5;
  string fecha_ejecucion = 6;
  repeated Secuencia secuencia = 7;
  double agua_caida = 8;
}

message SimulacionAcotada {
  string nombre = 1;
  string nombre_equipo = 2;
  string fecha_ejecucion = 3;
  double agua_caida = 4;
}

message SimulacionesReply {
  // Usado en listas desplegables y filas de tablas
  repeated SimulacionAcotada simulacion_acotada = 1;
}

message LecturaSensoresReply {
  string nombre_simulacion = 1;
  string nombre_equipo = 2;
  double flujo_medido = 3;
  double tiempo_transcurrido = 4;
}